--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "name": "letstalkandvote",
   "version": "1.0.0",
+  "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build && next export",
     "start": "next start"
   },
   "dependencies": {
+    "@supabase/supabase-js": "2.39.7",
     "next": "13.5.2",
     "react": "18.2.0",
     "react-dom": "18.2.0"
